overflow issue and date in month algorithm

--- a/calendarapp/src/components/calendar.css
+++ b/calendarapp/src/components/calendar.css
@@ -2,13 +2,12 @@
     border-radius: 25px;;
     display: flex;
     flex-direction: row;
-    min-height: 80%;
+    height: 80vh;
     width: 100%;
     border: 8px solid black;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-content: space-evenly;
-    align-items: start;
     gap: 5px;
     padding: 1px;
 }
@@ -16,7 +15,7 @@
 .calendar {
     border-radius: 15px 50px 30px;
     background-color: grey;
-    flex: 0 1 15%;
-    aspect-ratio: 1 / 1;
+    height: 20%;
+    width: 10%;
     font-size: 20pt;
 }
